--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AwesomeCuisine">
+        android:theme="@style/SplashScreenStyle">
         <activity
             android:name=".ui.activities.DetailsActivity"
             android:label="Details"
