update networklistener done and removed kotlin extension deprecated.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId "rachmanforniandi.awesomecuisine"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
